macos/Generated/safeparts_uniffiFFI.h

// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
void ffi_safeparts_uniffi_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_safeparts_uniffi_rust_future_cancel_u16(uint64_t handle
);
void ffi_safeparts_uniffi_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_safeparts_uniffi_rust_future_complete_u16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_safeparts_uniffi_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_safeparts_uniffi_rust_future_cancel_i16(uint64_t handle
);
void ffi_safeparts_uniffi_rust_future_free_i16(uint64_t handle
);
int16_t ffi_safeparts_uniffi_rust_future_complete_i16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_safeparts_uniffi_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_safeparts_uniffi_rust_future_cancel_u32(uint64_t handle
);
void ffi_safeparts_uniffi_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_safeparts_uniffi_rust_future_complete_u32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_safeparts_uniffi_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_safeparts_uniffi_rust_future_cancel_i32(uint64_t handle
);
void ffi_safeparts_uniffi_rust_future_free_i32(uint64_t handle
);
int32_t ffi_safeparts_uniffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_safeparts_uniffi_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_safeparts_uniffi_rust_future_cancel_u64(uint64_t handle
);
void ffi_safeparts_uniffi_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_safeparts_uniffi_rust_future_complete_u64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_safeparts_uniffi_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_safeparts_uniffi_rust_future_cancel_i64(uint64_t handle
);
void ffi_safeparts_uniffi_rust_future_free_i64(uint64_t handle
);
int64_t ffi_safeparts_uniffi_rust_future_complete_i64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_safeparts_uniffi_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_safeparts_uniffi_rust_future_cancel_f32(uint64_t handle
);
void ffi_safeparts_uniffi_rust_future_free_f32(uint64_t handle
);
float ffi_safeparts_uniffi_rust_future_complete_f32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_safeparts_uniffi_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_safeparts_uniffi_rust_future_cancel_f64(uint64_t handle
);
void ffi_safeparts_uniffi_rust_future_free_f64(uint64_t handle
);