windows/Generated/safeparts_uniffi.cs


    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_u16(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_u16(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_u16(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort ffi_safeparts_uniffi_rust_future_complete_u16(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_i16(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_i16(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_i16(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     short ffi_safeparts_uniffi_rust_future_complete_i16(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_u32(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_u32(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_u32(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     uint ffi_safeparts_uniffi_rust_future_complete_u32(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_i32(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_i32(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_i32(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     int ffi_safeparts_uniffi_rust_future_complete_i32(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_u64(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_u64(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_u64(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong ffi_safeparts_uniffi_rust_future_complete_u64(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_i64(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_i64(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_i64(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     long ffi_safeparts_uniffi_rust_future_complete_i64(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_f32(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_f32(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_f32(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     float ffi_safeparts_uniffi_rust_future_complete_f32(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_f64(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_f64(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_f64(ulong @handle
    );
